[gd_scene load_steps=4 format=3 uid="uid://dcbaox3jjl0fo"]

[ext_resource type="PackedScene" uid="uid://dd76ckxju3srw" path="res://Characters/Rogue.glb" id="1_1fsce"]
[ext_resource type="Script" path="res://rogue.gd" id="1_oqoc6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dq83y"]
radius = 0.488044
height = 2.05053

[node name="Node3D" type="Node3D" groups=["interactable"]]

[node name="Rogue" parent="." groups=["interactable"] instance=ExtResource("1_1fsce")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.548421, 0, 0.854884)
script = ExtResource("1_oqoc6")

[node name="Skeleton3D" parent="Rogue/Rig" index="0"]
bones/4/rotation = Quaternion(-0.514121, -0.485468, -0.485468, 0.514122)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(1.64805e-09, -5.95036e-08, -0.0552855, 0.998471)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(1.20018e-09, 1.33102e-07, -5.4552e-06, 1)
bones/8/rotation = Quaternion(1.60975e-09, 1.60975e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-2.76174e-14, -1.96984e-07, 1.40073e-07, 1)
bones/10/rotation = Quaternion(-0.514121, 0.485468, 0.485468, 0.514122)
bones/10/scale = Vector3(0.999999, 0.999999, 1)
bones/11/rotation = Quaternion(1.64805e-09, 5.95036e-08, 0.0552855, 0.998471)
bones/12/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/12/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(1.60973e-09, -1.60973e-09, 0.707107, 0.707107)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(1.84042e-07, 0.707107, -1.18836e-07, 0.707107)
bones/16/rotation = Quaternion(1.84042e-07, 0.707107, -1.18836e-07, 0.707107)
bones/17/rotation = Quaternion(1.40073e-07, 1, -1.03316e-07, -9.11951e-09)
bones/18/rotation = Quaternion(1.32707e-07, 1, -4.37114e-08, -2.27651e-09)
bones/20/rotation = Quaternion(4.44848e-36, -7.10543e-15, -6.26068e-22, 1)
bones/21/rotation = Quaternion(0.999849, -7.13277e-08, -1.20427e-08, 0.0173732)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.106225, 6.86529e-08, -7.37702e-08, 0.994342)
bones/23/rotation = Quaternion(-0.455239, 1.6197e-08, -3.43567e-08, 0.890369)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.999849, 7.42657e-08, -3.17263e-08, 0.0173732)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.106225, -6.86529e-08, 7.37702e-08, 0.994342)
bones/27/rotation = Quaternion(-0.455239, 1.65983e-07, 2.25077e-09, 0.890369)
bones/28/rotation = Quaternion(3.04797e-08, 0.920355, -0.391084, -6.94849e-08)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.707107, -2.29302e-07, -4.60551e-08, 0.707107)
bones/30/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/31/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.33983e-34)
bones/32/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.9526e-08)
bones/32/scale = Vector3(1, 1, 1)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(1, -3.10863e-15, 1.94707e-07, -6.91739e-22)
bones/36/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/37/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/38/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.33983e-34)
bones/39/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/40/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/44/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/45/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/46/rotation = Quaternion(-0.5, 0.5, 0.5, 0.5)

[node name="Knife_Offhand" parent="Rogue/Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.999999, -6.12935e-07, -5.99785e-07, -6.31091e-07, -1.18993e-06, 1, -6.31565e-07, 0.999999, 1.2195e-06, 0.883132, 1.04926, -1.59729e-05)
visible = false

[node name="1H_Crossbow" parent="Rogue/Rig/Skeleton3D" index="1"]
transform = Transform3D(-9.93752e-07, 4.64738e-07, -0.999999, -1, -1.01015e-06, 1.02506e-06, -1.03971e-06, 0.999999, 4.83368e-07, -0.778504, 1.04926, -0.0103741)
visible = false

[node name="2H_Crossbow" parent="Rogue/Rig/Skeleton3D" index="2"]
transform = Transform3D(-9.93752e-07, 4.64738e-07, -0.999999, -1, -1.01015e-06, 1.02506e-06, -1.03971e-06, 0.999999, 4.83368e-07, -0.778504, 1.04926, -0.0103741)
visible = false

[node name="Knife" parent="Rogue/Rig/Skeleton3D" index="3"]
transform = Transform3D(0.999999, 6.12926e-07, -9.75513e-07, -1.00682e-06, -1.309e-06, -1, -6.31556e-07, 0.999999, -1.33856e-06, -0.883132, 1.04926, -1.56391e-05)

[node name="Throwable" parent="Rogue/Rig/Skeleton3D" index="4"]
transform = Transform3D(0.999999, 6.27658e-07, -9.89199e-07, -1.02051e-06, -1.18979e-06, -1, -6.46288e-07, 0.999999, -1.21935e-06, -0.883132, 1.04926, 0.18023)
visible = false

[node name="Rogue_Cape" parent="Rogue/Rig/Skeleton3D" index="5"]
transform = Transform3D(1, 1.25214e-21, -5.0822e-21, -1.25214e-21, 1, 0, 5.0822e-21, 0, 1, 0, 1.21587, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rogue" groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02785, 0)
shape = SubResource("CapsuleShape3D_dq83y")

[node name="Dialogue" type="Label3D" parent="Rogue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.48598, 0)
billboard = 1

[node name="next_char" type="Timer" parent="Rogue"]

[node name="next_message" type="Timer" parent="Rogue"]

[connection signal="timeout" from="Rogue/next_char" to="Rogue" method="_on_next_char_timeout"]
[connection signal="timeout" from="Rogue/next_message" to="Rogue" method="_on_next_message_timeout"]

[editable path="Rogue"]
